src/tokens.css
:root {
  /** Quantinuum brand colors **/
  --quantinuum-weaker: 169 54% 92%;
  --quantinuum-weak: 167 55% 77%;
  --quantinuum: 168 55% 62%;
  --quantinuum-strong: 170 54% 41%;
  --quantinuum-stronger: 176 54% 25%;

  color-scheme: light;
  --background-sunk: 0 0% 98%;
  --background: 0 0% 100%;
  --foreground: 240 10% 3.9%;
  --card: 0 0% 100%;
  --card-foreground: 240 10% 3.9%;
  --popover: 0 0% 100%;
  --popover-foreground: 240 10% 3.9%;
  --primary: 240 5.9% 10%;
  --primary-foreground: 0 0% 98%;
  --secondary: 240 4.8% 95.9%;
  --secondary-foreground: 240 5.9% 10%;
  --muted: 240 4.8% 95.9%;
  --muted-foreground: 240 3.8% 46.1%;
  --accent: 240 4.8% 95.9%;
  --accent-foreground: 240 5.9% 10%;
  --destructive: 0 84.2% 60.2%;
  --destructive-foreground: 0 0% 98%;
  --border: 240 5.9% 90%;
  --input: 240 4.9% 83.9%;
  --ring: 240 5.9% 10%;
  --radius: 0.3rem;
  --chart-1: 12 76% 61%;
  --chart-2: 173 58% 39%;
  --chart-3: 197 37% 24%;
  --chart-4: 43 74% 66%;
  --chart-5: 27 87% 67%;
}

:root [data-theme="dark"] {
  color-scheme: dark;
  --background-sunk: 240 10% 6%;
  --background: 240 3.7% 12%;
  --foreground: 0 0% 100%;
  --card: 240 3.7% 12%;
  --card-foreground: 0 0% 100%;
  --popover: 240 3.7% 12%;
  --popover-foreground: 0 0% 100%;
  --primary: 0 0% 100%;
  --primary-foreground: 240 3.7% 12%;
  --secondary: 240 3.7% 12%;
  --secondary-foreground: 0 0% 100%;
  --muted: 240 5.3% 26.1%;
  --muted-foreground: 240 4.9% 83.9%;
  --accent: 240 5.3% 26.1%;
  --accent-foreground: 0 0% 98%;
  --destructive: 0 62.8% 30.6%;
  --destructive-foreground: 0 0% 100%;
  --border: 240 5.3% 17.9%;
  --input: 240 5.2% 20.9%;
  --ring: 240 5.9% 90%;
  --chart-1: 220 70% 50%;
  --chart-2: 160 60% 45%;
  --chart-3: 30 80% 55%;
  --chart-4: 280 65% 60%;
  --chart-5: 340 75% 55%;
}

